package lld.cabbooking;

public enum RideStatus {

    REQUESTED, DRIVER_ASSIGNED, IN_PROGRESS, COMPLETED, CANCELLED

}
