package lld.cabbooking;

public enum VehicleType {

    MINI, SEDAN, SUV

}
